--- a/index.html
+++ b/index.html
@@ -673,19 +673,18 @@
             >
               <ul class="social_list">
                 <li>
-                  <a href="https://www.facebook.com/profile.php?id=100072336046209"
-                    ><i
+                  <i
                       class="fa fa-facebook-square"
                       aria-hidden="true"
                       style="cursor: pointer;"
                     ></i
-                  ></a>
+                  >
                 </li>
                 <li>
                   <a href=""><i class="fa fa-github" aria-hidden="true" style="cursor: pointer;"></i></a>
                 </li>
-                <li><a href="https://twitter.com/CryptoLower1?t=FBPluDGAIXWfCv4O8ZeM0Q&s=08"><i class="fa fa-twitter" aria-hidden="true" style="cursor: pointer;"></i></a></li>
-                <li><a href="https://www.instagram.com/invites/contact/?i=fjx1d9l1he3v&utm_content=it97iz3"><i class="fa fa-instagram" aria-hidden="true" style="cursor: pointer;"></i></a></li>
+                <li><i class="fa fa-twitter" aria-hidden="true" style="cursor: pointer;"></i><</li>
+                <li><i class="fa fa-instagram" aria-hidden="true" style="cursor: pointer;"></i></li>
               </ul>
             </div>
             <div
