--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                   >
                 </li>
                 <li>
-                  <a href=""><i class="fa fa-github" aria-hidden="true" style="cursor: pointer;"></i></a>
+                  <i class="fa fa-github" aria-hidden="true" style="cursor: pointer;"></i>
                 </li>
                 <li><i class="fa fa-twitter" aria-hidden="true" style="cursor: pointer;"></i><</li>
                 <li><i class="fa fa-instagram" aria-hidden="true" style="cursor: pointer;"></i></li>
