--- a/index.html
+++ b/index.html
@@ -672,19 +672,22 @@
               "
             >
               <ul class="social_list">
+             
                 <li>
+                     <a href="https://awais-git-repos.github.io/portfolio/">
                   <i
                       class="fa fa-facebook-square"
                       aria-hidden="true"
                       style="cursor: pointer;"
                     ></i
                   >
+                  </a>
                 </li>
                 <li>
-                  <a href="/"><i class="fa fa-github" aria-hidden="true" style="cursor: pointer;"></a></i>
+                  <a href="https://awais-git-repos.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" style="cursor: pointer;"></a></i>
                 </li>
-                <li><i class="fa fa-twitter" aria-hidden="true" style="cursor: pointer;"></i><</li>
-                <li><i class="fa fa-instagram" aria-hidden="true" style="cursor: pointer;"></i></li>
+                <li> <a href="https://awais-git-repos.github.io/portfolio/"> <i class="fa fa-twitter" aria-hidden="true" style="cursor: pointer;"></i></a><</li>
+                <li> <a href="https://awais-git-repos.github.io/portfolio/"> <i class="fa fa-instagram" aria-hidden="true" style="cursor: pointer;"></i></a></li>
               </ul>
             </div>
             <div
