--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                 <li>
                   <a href="https://awais-git-repos.github.io/portfolio/"><i class="fa fa-github" aria-hidden="true" style="cursor: pointer;"></a></i>
                 </li>
-                <li> <a href="https://awais-git-repos.github.io/portfolio/"> <i class="fa fa-twitter" aria-hidden="true" style="cursor: pointer;"></i></a><</li>
+                <li> <a href="https://awais-git-repos.github.io/portfolio/"> <i class="fa fa-twitter" aria-hidden="true" style="cursor: pointer;"></i></a></li>
                 <li> <a href="https://awais-git-repos.github.io/portfolio/"> <i class="fa fa-instagram" aria-hidden="true" style="cursor: pointer;"></i></a></li>
               </ul>
             </div>
